test/hotCases/errors/unaccepted-ignored/a.js
export default 2;
---
export default 3;
---
export default 3;
---
export default 4;
